# pacca

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PACCA_Evaluation_Complete_Report.docx  README.md  RUNBOOK_iter2.md  RUNBOOK_iter3.md  RUNBOOK_iter4.md  RUNBOOK_iter5.md  RUNBOOK_iter6.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  seed_data.py  upgrade_to_level5.sh
.claude/agents/: reviewer.md
.githooks/: pacca_guard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
demo/: cases.json  demo_report.md  generate_demo_data.py  results_20260404_182549.json  results_20260404_183616.json  run_demo.py
demo/scenarios/: clinical_scenarios.py
docs/: AGENT_LESSONS.md  ARCHITECTURE.md  BAA_INVENTORY.md  CASE_AUTHORING_GUIDE.md  CASE_PROVENANCE.md  CRB_SOURCING.md  DATASET_GROWTH_ROADMAP.md  DATASET_SUFFICIENCY.md  DECISIONS.md  DEMO_CASES.md  DEMO_SCRIPT_v1.md  ENGINEERING.md  ENGINEERING_DECISIONS.md  EVALUATION.md  EVALUATION_COVERAGE.md  HARNESS.md  HIPAA_COMPLIANCE.md  ITER6_DESIGN.md  ITERATIONS.md  PACCA_PRD_Consolidated.md  PACCA_PRD_v2.3_Consolidated.md  PACCA_PRD_v2.4_Consolidated.md  PACCA_PRD_v2.5_Consolidated.md  PACCA_SDD_v2.2.md  PAPERS_AND_POSTS.md  PRD_v2.2.md  PRODUCTION_READINESS.md  PUSH_TO_300_PLAN.md  REGULATORY_RFP.md  RELEASE_NOTES_v2.2.md  REVIEW_iter-2.md  RUNTIME_TUNABLE_THRESHOLDS_DESIGN.md  RUNTIME_TUNABLE_THRESHOLDS_PLAN.md  SME_CASE_AGENT_DESIGN.md  SME_CASE_AGENT_INSTALL.md  SME_CASE_AGENT_USER_MANUAL.md  SME_WEB_UI_DEPLOYMENT.md  STATISTICAL_POWER.md  TRIAGE_PIPELINE_DESIGN.md  TRIAGE_PIPELINE_PLAN.md
docs/assets/: iteration_cycle.dot
docs/demo/: visual-track.html
docs/engineering-runbooks/: bedrock-routing.md  embedding-upgrade.md  pgvector-migration.md  postgres-hardening.md
docs/findings/: GC-001.md  GC-010.md  GC-012.md  H2-memory-iteration-1.md  README.md
docs/images/: README.md
docs_reconciliation/: ITER0_ERRATUM.md  ITER0_ERRATUM_ENTRIES.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: capture-readme-screenshots.mjs
frontend/src/: App.tsx  AppLayout.tsx  index.css  main.tsx
frontend/src/components/: AdminDashboard.tsx  AuthorizationDetail.tsx  AuthorizationList.tsx  Dashboard.tsx  DirectorQueue.tsx  EditorialNav.tsx  Header.tsx  Login.tsx  LoginScreen.tsx  MonoChip.tsx  NewAuthorizationForm.tsx  ProviderDashboard.tsx  StatusInk.tsx
frontend/src/hooks/: useApi.ts
frontend/src/sme-authoring/: SMEAuthoringLayout.tsx  api.ts  theme.css  types.ts
frontend/src/styles/: theme.css
frontend/src/types/: index.ts
harness/manifests/: change_manifest.schema.json  iter-0.json  iter-1.json  iter-10.json  iter-11.json  iter-12.json  iter-2.json  iter-3.json  iter-4.json  iter-5.json  iter-6.json  iter-7.json  iter-8.json  iter-9.json
scripts/: generate_assets.py
src/pacca/: __init__.py  cli.py
src/pacca/agents/: __init__.py  _prompt_loader.py  base.py  classification_agent.py  clinical_risk_detector.py  decision.py  decision_agent.py  evidence_agent.py  evidence_grounding.py  evolution.py  orchestrator.py  scope_guard.py  types.py
src/pacca/api/: __init__.py  auth.py  database.py  main.py  models.py  seed_db.py
src/pacca/config/: __init__.py  logging.py  settings.py  tracing.py
src/pacca/db/: __init__.py  models.py  repository.py  session.py
src/pacca/harness/: __init__.py  validate_manifest.py
src/pacca/integrations/: vector_store.py
src/pacca/models/: __init__.py  authorization.py  clinical.py  enums.py  guidelines.py  intent.py  triage.py
src/pacca/rag/: __init__.py  pipeline.py  sample_guidelines.py
tests/: conftest.py  test_level5_flow.py
tests/clinical/: adult_complexity_cases.py  ambiguous_completeness_cases.py  capture_baseline.py  cardiology_cases.py  denial_cases.py  depth_extension_cases.py  endocrinology_cases.py  evaluator.py  expansion_cases.py  geriatric_cases.py  golden_cases.py  hematology_cases.py  investigate_case.py  mental_health_cases.py  near_miss_cases.py  neurology_cases.py  ob_cases.py  oncology_breadth_cases.py  oncology_depth_cases.py  pediatric_cases.py  pulmonology_adult_cases.py  regression_gate.py  sme_authoring_smoke_test.py  test_clinical_accuracy.py  transplant_cases.py
tests/clinical/baselines/: iter-1-baseline.json  iter-3-baseline.json  iter-3-chg1-baseline.json  iter-4-baseline.json  iter-5-baseline.json  iter-6-baseline.json
tests/harness/: __init__.py  doc_drift_guard.py  test_iter2_hardening.py
tests/integration/: test_submit_postgres.py
tests/unit/: _test_api_v1.py  test_api.py  test_audit_fk_deferrable.py  test_audit_trail.py  test_classification_agent.py  test_complexity_score_model.py  test_confidence_routing.py  test_config_api.py  test_decision_id_provenance.py  test_doc_drift.py  test_effective_settings.py  test_escalation_high_cost_and_pediatric.py  test_escalation_tree.py  test_evidence_agent.py  test_evidence_grounding.py  test_h2_memory_criterion_preservation.py  test_logging_smoke.py  test_models.py  test_pacca_guard_hook.py  test_persistence_repair.py  test_persistence_rollback.py  test_prompt_engineering.py  test_retry_and_tracing.py  test_scope_guard.py  test_security_and_scalability.py  test_seed_guidelines.py  test_triage_models.py  test_triage_orchestration.py  test_users_table_init.py  test_validate_manifest.py
tests/unit/api/: __init__.py  conftest.py  test_sme_authoring_routes.py  test_sme_authoring_websocket.py
tests/unit/sme_authoring/: __init__.py  conftest.py  test_agent_with_mocked_llm.py  test_case_writer.py  test_cli_commands.py  test_cli_new_subcommands.py  test_coverage_updater.py  test_file_router.py  test_gap_analyzer.py  test_id_allocator.py  test_pr_template.py  test_provenance_writer.py  test_roadmap_reader.py  test_sandbox.py  test_session.py  (+2 more)
(+63 files in other folders)
