[project]
name = "pacca"
version = "0.1.0"
description = "Prior Authorization & Care Coordination Agent Platform - A multi-agent AI system for healthcare authorization workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "PACCA Team" }
]
keywords = [
    "healthcare",
    "ai",
    "agents",
    "prior-authorization",
    "llm",
    "claude",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # Data Validation & Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",  # For local dev with SQLite
    
    # Redis
    "redis>=5.2.0",
    
    # LLM Integration
    "anthropic>=0.40.0",
    
    # Vector Store (local)
    "chromadb>=0.5.0",
    
    # HTTP Client
    "httpx>=0.28.0",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",  # Retry logic with exponential backoff
    "uuid7>=0.1.0",  # Time-sortable UUIDs

    # Observability — OpenTelemetry
    "opentelemetry-api>=1.27.0",           # Core OTel API (spans, traces, metrics)
    "opentelemetry-sdk>=1.27.0",           # OTel SDK implementation
    "opentelemetry-instrumentation-fastapi>=0.48b0",  # Auto-instrument FastAPI requests
    "opentelemetry-exporter-otlp-proto-http>=1.27.0", # Export to Langfuse / Jaeger / Tempo
    
    # Date/Time
    "python-dateutil>=2.9.0",
    
    # JSON Schema
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.21.0",  # asyncio_mode='auto' requires >= 0.21
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.115.0",
    "respx>=0.21.0",  # Mock httpx requests
    "faker>=30.0.0",  # Generate fake data
    
    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    
    # Type Stubs
    "types-python-dateutil>=2.9.0",
    "types-redis>=4.6.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pacca"
Documentation = "https://github.com/yourusername/pacca#readme"
Repository = "https://github.com/yourusername/pacca"
Issues = "https://github.com/yourusername/pacca/issues"

[project.scripts]
pacca = "pacca.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pacca"]

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments in tests are fine (fixtures)
    "PLR2004", # Magic values in tests are fine
]

[tool.ruff.lint.isort]
known-first-party = ["pacca"]

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "anthropic.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]  # Makes 'pacca' importable without pip install -e .
norecursedirs = ["archive", ".git", ".venv", "venv", "dist", "build"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no API calls)",
    "integration: Integration tests (requires running services)",
    "clinical: Clinical validation tests (slow, requires ANTHROPIC_API_KEY — run nightly)",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src/pacca"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
